fix cropped banner on mobile

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -4501,7 +4501,7 @@ pre .com, code .com {
 }
 @media (max-width: 991.98px) {
 	body {
-		padding-top: 72px;
+		padding-top: 74.55px;
 }
 }
 .modal-backdrop.show
